
== Unreleased

Enhancements::

* add `save_theme` helper to work with a copy of the theme within a scope (#2196)
* add support for `scale` attribute or `iw` unit on `pdfwidth` attribute on image macros (#1933)
* add backlink from bibref on bibliography entry to first reference to that entry in the document (#1737)

== 2.0.7 (2022-06-03) - @mojavelinux

Improvements::

* don't recommend prawn-gmagick if PNG or JPG is corrupt or incomplete
* add helper method to determine when to recommend the prawn-gmagick gem

Bug Fixes::

* fix crash when doctitle or section title with automatic ID contains inline image without explicit width (#2228)
* use prawn-gmagick, if available, to read raster image referenced by SVG (#2223)
* allow image path in SVG to refer to any location within Asciidoctor jail (no restriction if safe mode is unsafe) (#1941)

=== Details

{url-repo}/releases/tag/v2.0.7[git tag] | {url-repo}/compare/v2.0.6\...v2.0.7[full diff]

== 2.0.6 (2022-05-30) - @mojavelinux

Bug Fixes::

* indent content of collapsible block and apply bottom margin to match style of HTML output (#2219)
* patch prawn-gmagick to reread bit depth of a PNG image if it extracts the wrong value (#2216)
* interpret width of SVG correctly when width is defined in file using px units (#2215)
* don't crash if inline role defines border width but not border color

=== Details

{url-repo}/releases/tag/v2.0.6[git tag] | {url-repo}/compare/v2.0.5\...v2.0.6[full diff]

== 2.0.5 (2022-05-26) - @mojavelinux

Bug Fixes::

* do not filter TOC entries without an ID when computing the TOC extent (#2210)
* fix width of multi-word phrase with background and border offset (#2059)

=== Details

{url-repo}/releases/tag/v2.0.5[git tag] | {url-repo}/compare/v2.0.4\...v2.0.5[full diff]

== 2.0.4 (2022-05-25) - @mojavelinux

Bug Fixes::

* fix calculation of TOC extent when TOC entry has children but no ID (#2208)

=== Details
